<resources>

    <string name="selectedItems">Selected Items: %d</string>
    <string name="cof_delete_txt">Confirm Delete</string>
    <string name="msg_delete">Are you sure you want to remove this product?</string>
    <string name="no_txt">No</string>
    <string name="yes_txt">Yes</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="lang">ខ្មែរ</string>
    <string name="app_scheme" translatable="false">furniturestore</string>
    <string name="change_new_pw_txt">Change New Password</string>
    <string name="purchase_history">Purchase History</string>
    <string name="price_txt">Price: $%s</string>
    <string name="quantity_txt">Qty: %s</string>
    <string name="ic_pf_txt">Profile</string>
    <string name="ic_cart_txt">Cart</string>
    <string name="ic_home_txt">Home</string>
    <string name="ic_fav_txt">Favorite</string>
    <string name="discount_txt">Sale Up\n To 70% off</string>
    <string name="chair_txt">Accent chairs make great conversation pieces, as well as giving extra seating if necessary without taking up a lot of space," says interior designer Andi Morse.</string>
    <string name="description_search">Search here..</string>
    <string name="text_splashscreen">Modern Furniture\nFor Your Dream\nHourse</string>
    <string name="welcome_txt">welcome</string>
    <string name="email_txt">Email</string>
    <string name="signIn_txt">Sign In</string>
    <string name="pw_input">Password</string>
    <string name="em_input">Email</string>
    <string name="click_here_btn">Click Here</string>
    <string name="forgot_your_password_txt">Forgot your password?</string>
    <string name="sign_in_txt">Sign In</string>
    <string name="sign_up_txt">Sign Up</string>
    <string name="don_t_have_an_account_txt">Don\'t have an account?</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="confirmation_password_txt">Confirm Password</string>
    <string name="username_txt">Name</string>
    <string name="already_have_an_account_txt">Already have an account?</string>
    <string name="forgot_password_txt">Forgot Password?</string>
    <string name="enter_your_email_address_txt">Enter your email address</string>
    <string name="i_did_not_receive_a_code_txt">I didn\'t receive a code</string>
    <string name="resend_txt">Resend</string>
    <string name="forgot_password_desc_txt">
        Don\'t worry it happens. Please enter\nthe email associated with your account.
    </string>
    <string name="enter_your_code_here_txt">Enter your code here</string>
    <string name="verify_code_title">Verify Code</string>
    <string name="verify_txt">Verify</string>
    <string name="verify_code_txt">Verify Code</string>
    <string name="category_txt">Category</string>
    <string name="search_categories_here_txt">Search Categories here....</string>
    <string name="category_title">Categories</string>
    <string name="detail_product_txt">Detail Product</string>

    <string name="long_txt">
        You can also use a custom view to implement a more sophisticated "See more" functionality. For example, you could use a custom view that allows the user to collapse the text by clicking on a "See less" button.
                You can also use a custom view to implement a more sophisticated "See more" functionality. For example, you could use a custom view that allows the user to collapse the text by clicking on a "See less" button.
    </string>
    <string name="description_title">Description</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="explore">Explore</string>
    <string name="_1">1</string>
    <string name="checkout">Checkout</string>
    <string name="image_content">This an image</string>
    <string name="no_data">No Data</string>
    <string name="sign_in_success">You are singed in successfully</string>
    <string name="sign_up_success">You are singed up successfully</string>
    <string name="profile_update_success">Profile updated successfully</string>
    <string name="password_update_success">Password changed successfully</string>
    <string name="sign_in_failed">Sign in failed</string>
    <string name="error_unauthorized">Invalid Email or Password</string>
    <string name="error_occurred">Something went wrong</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="change_language">Change Language to Khmer</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="send_reset">Send reset password</string>
    <string name="reset_password_success">Reset password successfully</string>
    <string name="resend_code_countdown_minutes">We have send OTP to your email: %1$02d:%2$02d </string>
    <string name="resend_code_countdown_seconds">We have send OTP to your email: %ds </string>
    <string name="verify_code_content">Please check OTP we have sent in your email.</string>
    <string name="thank_you_for_your_purchase">Thank You for your purchase</string>
    <string name="continue_txt">Done</string>
    <string name="categories_txt">Categories</string>
    <string name="reset_new_password">Reset New Password</string>
    <string name="no_data_yet">No Data Yet!</string>
    <string name="total">Total</string>
    <string name="items">Items</string>
    <string name="shipping">Shipping</string>
    <string name="save">Save</string>
    <string name="loading">Loading…</string>
    <string name="update_failed">Update failed!</string>
</resources>