<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color"
            android:elevation="0dp"
            android:minHeight="?attr/actionBarSize">

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/image_content" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/lyt_signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/lyt_verifyEmail"
        android:layout_below="@id/appBar"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bitter"
            android:text="@string/forgot_your_password_txt"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/lyt_verifyEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/inner_lyt_verifyEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/descForgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_desc_txt"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/codeVerifyInput"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginVertical="16dp"
                android:autofillHints="Email"
                android:hint="@string/enter_your_email_address_txt"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyt_resendCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/inner_lyt_verifyEmail"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_did_not_receive_a_code_txt" />

            <TextView
                android:id="@+id/resendCodeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/resend_txt"
                android:textColor="@color/txt_color"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/sendResetBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lyt_resendCode"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/custom_style_btn"
            android:text="@string/send_reset"
            android:textColor="@color/white" />
    </RelativeLayout>
</RelativeLayout>