<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginHorizontal="16dp"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <TextView
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/txt_color"
            android:text="@string/verify_code_title"/>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/lyt_editTxt"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content">
       <RelativeLayout
           android:layout_centerVertical="true"
           android:layout_alignParentStart="true"
           android:layout_alignParentEnd="true"
           android:orientation="vertical"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           tools:ignore="UselessParent">
           <EditText
               android:layout_marginVertical="16dp"
               android:id="@+id/verifyCode"
               android:inputType="text"
               android:layout_width="match_parent"
               android:hint="@string/enter_your_code_here_txt"
               android:layout_height="60dp"
               android:autofillHints="Email" />

           <Button
               android:background="@drawable/custom_style_btn"
               android:layout_marginVertical="10dp"
               android:layout_centerHorizontal="true"
               android:layout_below="@id/verifyCode"
               android:layout_gravity="center"
               android:textColor="@color/white"
               android:id="@+id/loginBtn"
               android:text="@string/signIn_txt"
               android:layout_width="match_parent"
               android:layout_marginHorizontal="20dp"
               android:layout_height="wrap_content"/>
           <LinearLayout
               android:layout_centerHorizontal="true"
               android:layout_below="@id/loginBtn"
               android:orientation="horizontal"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/don_t_have_an_account_txt"/>
               <TextView
                   android:id="@+id/signUpBtn"
                   android:layout_marginStart="4dp"
                   android:textStyle="bold"
                   android:textColor="@color/txt_color"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/sign_up_txt"/>
           </LinearLayout>
       </RelativeLayout>
    </RelativeLayout>






</RelativeLayout>