<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        app:elevation="0dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:background="@color/trans"
        android:layout_height="100dp">
    <LinearLayout
        android:paddingVertical="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-2dp"
            android:src="@drawable/ic_back"
            android:contentDescription="TODO" />
        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/txt_color"
            android:text="@string/sign_up_title"/>
    </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_marginHorizontal="16dp"
        android:id="@+id/lyt_editTxt"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">
            <EditText
                android:id="@+id/usernameInput"
                android:inputType="text"
                android:layout_width="match_parent"
                android:hint="@string/username_txt"
                android:layout_height="60dp"
                android:layout_marginBottom="2dp"
                android:autofillHints="Email" />
            <EditText
                android:layout_below="@id/usernameInput"
                android:layout_marginTop="10dp"
                android:id="@+id/emInput"
                android:inputType="text"
                android:layout_width="match_parent"
                android:hint="@string/email_txt"
                android:layout_height="60dp"
                android:layout_marginBottom="2dp"
                android:autofillHints="Email" />
            <EditText
                android:layout_below="@id/emInput"
                android:autofillHints="password"
                android:id="@+id/pwInput"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="2dp"
                android:hint="@string/pwInput"
                android:layout_height="60dp"
                android:inputType="textPassword" />
            <EditText
                android:id="@+id/cfPwInput"
                android:layout_below="@id/pwInput"
                android:autofillHints="password"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="2dp"
                android:hint="@string/confirmation_password_txt"
                android:layout_height="60dp"
                android:inputType="textPassword" />

            <Button
                android:layout_below="@id/cfPwInput"
                android:background="@drawable/custom_style_btn"
                android:layout_marginVertical="10dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:id="@+id/signUpBtn"
                android:text="@string/sign_up_title"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_centerHorizontal="true"
                android:layout_below="@id/signUpBtn"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account_txt"/>
                <TextView
                    android:id="@+id/signInBtn"
                    android:layout_marginStart="4dp"
                    android:textStyle="bold"
                    android:textColor="@color/txt_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signIn_txt"/>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>






</RelativeLayout>