<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    style="@style/SCREEN"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">


    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/lyt_signIn"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_above="@id/lyt_verifyEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TEXT"
            android:textStyle="bold"
            android:textSize="28sp"
            android:fontFamily="@font/bitter"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify_code_title" />

        <TextView
            android:visibility="gone"
            android:layout_margin="10dp"
            android:paddingStart="5dp"
            android:gravity="center_vertical"
            android:background="@color/red"
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/errorMsg"
            android:text="dsafsd"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>



    <RelativeLayout
        android:id="@+id/lyt_verifyEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lyt_innerVerifyEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <TextView
                style="@style/TEXT"
                android:id="@+id/descForgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verify_code_content"
                android:textSize="14sp" />

            <EditText
                style="@style/TEXT"
                android:id="@+id/codeVerifyInput"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginVertical="16dp"
                android:autofillHints="Email"
                android:hint="Enter 6 numbers"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyt_resendCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lyt_innerVerifyEmail"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                style="@style/TEXT"
                android:id="@+id/resendCodeContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_did_not_receive_a_code_txt" />

            <TextView
                style="@style/TEXT"
                android:id="@+id/resendCodeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/resend_txt"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/BUTTON"
            android:id="@+id/verifyBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lyt_resendCode"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/custom_style_btn"
            android:text="@string/verify_txt" />
    </RelativeLayout>
</RelativeLayout>