<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:backgroundTint="@color/trans"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/lyt_profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="50dp">

            <ImageView
                android:id="@+id/profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_content"
                android:scaleType="centerCrop" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/username"
            style="@style/TEXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lyt_profile"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:paddingVertical="5dp"
            android:text="@string/name"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <androidx.cardview.widget.CardView
            style="@style/BUTTON"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="5dp"
            android:orientation="vertical"
            app:cardCornerRadius="10dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/changeLanguageBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/trans"
                android:drawableStart="@drawable/ic_lang"
                android:drawableEnd="@drawable/ic_next"
                android:drawablePadding="10dp"
                android:paddingHorizontal="10dp"
                android:text="@string/change_language"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:srcCompat="@drawable/ic_minus" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/BUTTON"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="5dp"
            android:orientation="vertical"
            app:cardCornerRadius="10dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/editAvatarBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/trans"
                android:drawableStart="@drawable/ic_edit"
                android:drawableEnd="@drawable/ic_next"
                android:drawablePadding="10dp"
                android:paddingHorizontal="10dp"
                android:text="@string/edit_profile"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:srcCompat="@drawable/ic_minus" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/BUTTON"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="5dp"
            android:orientation="vertical"
            app:cardCornerRadius="10dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/changePwBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/trans"
                android:drawableStart="@drawable/ic_lock"
                android:drawableEnd="@drawable/ic_next"
                android:drawablePadding="10dp"
                android:paddingHorizontal="10dp"
                android:text="@string/change_password"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:srcCompat="@drawable/ic_minus" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/BUTTON"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="5dp"
            android:orientation="vertical"
            app:cardCornerRadius="10dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/switch_themes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/trans"
                android:drawableStart="@drawable/ic_light_mode"
                android:drawableEnd="@drawable/ic_next"
                android:drawablePadding="10dp"
                android:paddingHorizontal="10dp"
                android:text="@string/THEMES_MODE"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:srcCompat="@drawable/ic_minus" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/BUTTON"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="5dp"
            android:orientation="vertical"
            app:cardCornerRadius="10dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logoutBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/trans"
                android:drawableStart="@drawable/ic_logout"
                android:drawablePadding="10dp"
                android:paddingHorizontal="10dp"
                android:text="@string/logout"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/black" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>